# dmg

./: .gitignore  README.md  env.yml  pyproject.toml  requirements.txt  requirements_cpu.txt  ruff.toml  run_all.sh  setup.py
dmg/: cli.py
dmg/smiles_vae/: analyze.py  main.py  train.py
dmg/smiles_vae/utils/: compute_properties.py  optimization.py  smiles_processing.py
drug_molecule_generation_with_vae/: analyze.py  cli.py  generate.py  main.py  test.py  train.py
drug_molecule_generation_with_vae/data/: data_loader.py
drug_molecule_generation_with_vae/models/: encoder.py
drug_molecule_generation_with_vae/smiles_vae/: analyze.py  generate.py
drug_molecule_generation_with_vae/smiles_vae/data/: data_loader.py
drug_molecule_generation_with_vae/smiles_vae/models/: decoder.py  property_predictor.py  vae.py
drug_molecule_generation_with_vae/smiles_vae/utils/: config.py  loss_function.py
drug_molecule_generation_with_vae/utils/: compute_properties.py
submissions/: 1_paper_outline.md
training_data/: smilesVAE.ipynb
